classDiagram
class ProductCategoryMapsTable {
tableName(): String
cols(): ProductCategoryMapsCols
}
ProductCategoryMapsTable ..|> DbTable
class ProductCategoryMapsCols {
productIdCol: String
categoryIdCol: String
productId(): String
categoryId(): String
}
BaseCols <|-- ProductCategoryMapsCols
class ChatRoomsTable {
tableName(): String
cols(): ChatRoomsCols
}
ChatRoomsTable ..|> DbTable
class ChatRoomsCols {
userIdCol: String
merchantIdCol: String
userId(): String
merchantId(): String
}
BaseCols <|-- ChatRoomsCols
class OrderProductsTable {
tableName(): String
cols(): OrderProductsCols
}
OrderProductsTable ..|> DbTable
class OrderProductsCols {
orderIdCol: String
productIdCol: String
quantityCol: String
orderId(): String
productId(): String
quantity(): String
}
BaseCols <|-- OrderProductsCols
class ReviewsTable {
tableName(): String
cols(): ReviewsCols
}
ReviewsTable ..|> DbTable
class ReviewsCols {
userIdCol: String
merchantIdCol: String
textCol: String
ratingCol: String
userId(): String
merchantId(): String
text(): String
rating(): String
}
BaseCols <|-- ReviewsCols
class MerchantsTable {
tableName(): String
cols(): MerchantsCols
}
MerchantsTable ..|> DbTable
class MerchantsCols {
userIdCol: String
ratingCol: String
usernameCol: String
bioCol: String
emailCol: String
profileImageCol: String
passwordHashCol: String
userId(): String
rating(): String
username(): String
email(): String
bio(): String
profileImage(): String
passwordHash(): String
}
BaseCols <|-- MerchantsCols
class ProductMediasTable {
tableName(): String
cols(): ProductMediasCols
}
ProductMediasTable ..|> DbTable
class ProductMediasCols {
productIdCol: String
urlCol: String
mediaTypeCol: String
productId(): String
url(): String
mediaType(): String
}
BaseCols <|-- ProductMediasCols
class UsersTable {
tableName(): String
cols(): UsersCols
}
UsersTable ..|> DbTable
class UsersCols {
usernameCol: String
emailCol: String
passwordHashCol: String
phoneCol: String
addressCol: String
notesCol: String
profileImageUrlCol: String
bioCol: String
username(): String
email(): String
passwordHash(): String
phone(): String
address(): String
notes(): String
profileImageUrl(): String
bio(): String
}
BaseCols <|-- UsersCols
class LiveStreamProductsTable {
tableName(): String
cols(): LiveStreamProductsCols
}
LiveStreamProductsTable ..|> DbTable
class LiveStreamProductsCols {
liveStreamIdCol: String
productIdCol: String
liveStreamId(): String
productId(): String
}
BaseCols <|-- LiveStreamProductsCols
class ProductsTable {
tableName(): String
cols(): ProductsCols
}
ProductsTable ..|> DbTable
class ProductsCols {
merchantIdCol: String
nameCol: String
descriptionCol: String
priceCol: String
quantityCol: String
merchantId(): String
name(): String
description(): String
price(): String
quantity(): String
}
BaseCols <|-- ProductsCols
class PostSavesTable {
tableName(): String
cols(): PostSavesCols
}
PostSavesTable ..|> DbTable
class PostSavesCols {
userIdCol: String
postIdCol: String
userId(): String
postId(): String
}
BaseCols <|-- PostSavesCols
class LiveStreamsTable {
tableName(): String
cols(): LiveStreamsCols
}
LiveStreamsTable ..|> DbTable
class LiveStreamsCols {
merchantIdCol: String
titleCol: String
streamUrlCol: String
thumbnailUrlCol: String
viewCountCol: String
merchantId(): String
title(): String
streamUrl(): String
thumbnailUrl(): String
viewCount(): String
}
BaseCols <|-- LiveStreamsCols
class ChatsTable {
tableName(): String
cols(): ChatsCols
}
ChatsTable ..|> DbTable
class ChatsCols {
chatRoomIdCol: String
senderIdCol: String
textCol: String
chatRoomId(): String
senderId(): String
text(): String
}
BaseCols <|-- ChatsCols
class CartsTable {
tableName(): String
cols(): CartsCols
}
CartsTable ..|> DbTable
class CartsCols {
userIdCol: String
productIdCol: String
quantityCol: String
userId(): String
productId(): String
quantity(): String
}
BaseCols <|-- CartsCols
class PromoMediasTable {
tableName(): String
cols(): PromoMediasCols
}
PromoMediasTable ..|> DbTable
class PromoMediasCols {
postIdCol: String
urlCol: String
mediaTypeCol: String
postId(): String
url(): String
mediaType(): String
}
BaseCols <|-- PromoMediasCols
class OrdersTable {
tableName(): String
cols(): OrdersCols
}
OrdersTable ..|> DbTable
class OrdersCols {
userIdCol: String
merchantIdCol: String
statusCol: String
userId(): String
merchantId(): String
status(): String
}
BaseCols <|-- OrdersCols
class PostProductsTable {
tableName(): String
cols(): PostProductsCols
}
PostProductsTable ..|> DbTable
class PostProductsCols {
postIdCol: String
productIdCol: String
postId(): String
productId(): String
}
BaseCols <|-- PostProductsCols
class FollowersTable {
tableName(): String
cols(): FollowersCols
}
FollowersTable ..|> DbTable
class FollowersCols {
followerIdCol: String
followedIdCol: String
followerId(): String
followedId(): String
}
BaseCols <|-- FollowersCols
class Tables {
users: null
merchants: null
productCategories: null
products: null
productCategoryMaps: null
productMedias: null
posts: null
postProducts: null
promoMedias: null
postLikes: null
postSaves: null
liveStreams: null
liveStreamProducts: null
liveStreamChats: null
chatRooms: null
chats: null
carts: null
orders: null
orderProducts: null
reviews: null
followers: null
id(): String
}
class DbTable {
<<abstract>>
tableName(): String
cols(): T
}
class BaseCols {
<<abstract>>
idCol: String
createdAtCol: String
updatedAtCol: String
id(): String
createdAt(): String
updatedAt(): String
}
class LiveStreamChatsTable {
tableName(): String
cols(): LiveStreamChatsCols
}
LiveStreamChatsTable ..|> DbTable
class LiveStreamChatsCols {
liveStreamIdCol: String
userIdCol: String
textCol: String
liveStreamId(): String
userId(): String
text(): String
}
BaseCols <|-- LiveStreamChatsCols
class PostLikesTable {
tableName(): String
cols(): PostLikesCols
}
PostLikesTable ..|> DbTable
class PostLikesCols {
userIdCol: String
postIdCol: String
userId(): String
postId(): String
}
BaseCols <|-- PostLikesCols
class ProductCategoriesTable {
tableName(): String
cols(): ProductCategoriesCols
}
ProductCategoriesTable ..|> DbTable
class ProductCategoriesCols {
nameCol: String
name(): String
}
BaseCols <|-- ProductCategoriesCols
class PostsTable {
tableName(): String
cols(): PostsCols
}
PostsTable ..|> DbTable
class PostsCols {
merchantIdCol: String
captionCol: String
merchantId(): String
caption(): String
}
BaseCols <|-- PostsCols
